frontcover height to 100% change header font family to karla fix phone number color on safari

--- a/base.css
+++ b/base.css
@@ -26,10 +26,15 @@ a {
     color: black;
 }
 
+a[href^=tel]{
+    color:inherit;
+    text-decoration:none;
+}
+
 header{
     padding:15px 0px;
     font-size:24px;
-    font-family:cursive;
+    font-family:karla;
     text-align:center;
 }
 
