--- a/resume.css
+++ b/resume.css
@@ -3,7 +3,7 @@
 }
 
 #frontcover{
-    height:100vh;
+    height:100%;
     position:relative;
     min-height:600px;
     max-height:100%;
